# Lab_prog_02

./: CMakeLists.txt  README.md  main.c
clientes/: clientes.c  clientes.h
produtos/: produtos.c  produtos.h
vendas/: vendas.c  vendas.h
